--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,12 @@
 NEWS
 ====
-** minval v.0.3**
-* A bug in metabolites, products and reactants related with stoichiometric coefficients was solved
+**minval v.0.3**
+* A bug in products function was solved
+* A bug related with spaces between metabolites was solved in several functions
 
 **minval v.0.2**
-* A bug in compartment function was solved
 * Some functions were rewrited
+* A bug in the compartments function was solved.
 
 **minval v.0.1**
 * ChEBI database release 136 was added.
