--- a/vignettes/minval.Rmd
+++ b/vignettes/minval.Rmd
@@ -4,7 +4,8 @@ author: "Daniel Osorio, Janneth Gonzalez and Andres Pinzon-Velasco"
 date: "`r Sys.Date()`"
 output:
   pdf_document:
-  #toc: true
+  toc: true
+  geometry: margin=1in
 ---
 <!--
 %\VignetteEngine{knitr::rmarkdown}
@@ -15,4 +16,38 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 # Introduction to MINVAL
 The **MINVAL** package was designed as a tool to identify orphan metabolites and evaluate the mass and charge balance of stoichometric reactions. MINVAL also includes functions to write models in TSV and SBML formats, extract all reactants, products, metabolite names and compartments from a metabolic reconstruction.
+
 ## Getting started
+```{r}
+library(minval)
+```
+```{r}
+glycolysis <- read.csv2(system.file("extdata", "glycolysisKEGG.csv", package = "minval"))
+dim(glycolysis)
+colnames(glycolysis)
+````
+```{r}
+head(glycolysis$REACTION)
+```
+```{r}
+valid <- isValidSyntax(glycolysis$REACTION)
+valid
+```
+```{r}
+glycolysisValidated <- mapReactions(reactionList = valid,
+                                    referenceData = glycolysis,
+                                    by = "bool",
+                                    inverse = FALSE)
+dim(glycolysisValidated)
+```
+```{r message=FALSE}
+convert2sbml(glycolysisValidated,"glycolysisValidated.xml")
+library(sybilSBML)
+glycoModel <- readSBMLmod("glycolysisValidated.xml")
+glycoModel
+optimizeProb(glycoModel)
+```
+```{r}
+chemicalData <- read.csv2(system.file("extdata", "chemData.csv", package = "minval"))
+head(chemicalData)
+```
