--- a/vignettes/minval.Rmd
+++ b/vignettes/minval.Rmd
@@ -18,8 +18,9 @@ knitr::opts_chunk$set(echo = TRUE)
 The **MINVAL** package was designed as a tool to identify orphan metabolites and evaluate the mass and charge balance of stoichometric reactions. MINVAL also includes functions to write models in TSV and SBML formats, extract all reactants, products, metabolite names and compartments from a metabolic reconstruction.
 
 ## Getting started
-```{r}
+```{r message=FALSE}
 library(minval)
+library(sybilSBML)
 ```
 ```{r}
 glycolysis <- read.csv2(system.file("extdata", "glycolysisKEGG.csv", package = "minval"))
@@ -42,7 +43,6 @@ dim(glycolysisValidated)
 ```
 ```{r message=FALSE}
 convert2sbml(glycolysisValidated,"glycolysisValidated.xml")
-library(sybilSBML)
 glycoModel <- readSBMLmod("glycolysisValidated.xml")
 glycoModel
 optimizeProb(glycoModel)
@@ -50,4 +50,24 @@ optimizeProb(glycoModel)
 ```{r}
 chemicalData <- read.csv2(system.file("extdata", "chemData.csv", package = "minval"))
 head(chemicalData)
+```
+```{r}
+balanced <- isBalanced(reactionList = glycolysisValidated$REACTION,
+                       referenceData = chemicalData,
+                       ids = "NAME",
+                       mFormula = "FORMULA")
+balanced
+```
+```{r}
+glycolysisBalanced <- mapReactions(reactionList = balanced,
+                                   referenceData = glycolysisValidated,
+                                   by = "bool",
+                                   inverse = FALSE)
+dim(glycolysisBalanced)
+```
+```{r message=FALSE}
+convert2sbml(glycolysisBalanced,"glycolysisBalanced.xml")
+glycoModel <- readSBMLmod("glycolysisBalanced.xml")
+glycoModel
+optimizeProb(glycoModel)
 ```
