--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS
 ====
+**minval v.1.0**
+*
+*
+*
+*
+*
 **minval v.0.5**
 * All functions were vectorized
 * Functions to write TSV and SBML models were added
