--- a/vignettes/minval.Rmd
+++ b/vignettes/minval.Rmd
@@ -14,12 +14,11 @@ knitr::opts_chunk$set(collapse = TRUE, dev = "png", fig.width = 7, fig.height = 
 ## Introduction to MINVAL
 The **MINVAL** package was designed as a tool to identify orphan metabolites and evaluate the mass and charge balance of stoichometric reactions. MINVAL also includes functions to write models in TSV and SBML formats, extract all reactants, products, metabolite names and compartments from a metabolic reconstruction.
 
-## Syntax Evaluation
 ```{r, message=FALSE}
 library("minval")
 library("sybilSBML")
 ```
-
+## Metabolic Models
 ```{r}
 glycolysis <- read.csv(file = system.file("extdata", "glycolysisModel.csv",
                                           package = "minval"), 
@@ -27,9 +26,24 @@ glycolysis <- read.csv(file = system.file("extdata", "glycolysisModel.csv",
                         sep = '\t'
                         )
 ```
+
 ```{r}
 colnames(glycolysis)
 ```
+## SBML files
+```{r}
+writeSBML(modelData = glycolysis,
+          modelID = "Glycolysis",
+          outputFile = "glycolysis.xml"
+          )
+
+glycoModel <- sybilSBML::readSBMLmod("glycolysis.xml")
+glycoModel
+
+
+optimizeProb(glycoModel)
+```
+
 ```{r}
 validateSyntax(reactionList = glycolysis$REACTION)
 ```
@@ -97,16 +111,7 @@ orphanReactants(reactionList = glycolysis$REACTION)
 orphanProducts(reactionList = glycolysis$REACTION)
 
 ```
-## Output files
-```{r}
-writeSBML(modelData = glycolysis,
-          modelID = "Glycolysis",
-          outputFile = "glycolysis.xml"
-          )
-
-sybilSBML::readSBMLmod("glycolysis.xml")
-```
-
+### TSV files
 ```{r}
 writeTSV(modelData = glycolysis,
           modelID = "Glycolysis",
