--- a/vignettes/minval.Rmd
+++ b/vignettes/minval.Rmd
@@ -22,21 +22,23 @@ library("minval")
 library("sybilSBML")
 ```
 ### Metabolic Models
-Metabolic models are sets of stoichiometric reactions that represents a process where a set of chemical compounds called reactants are converted into others called products. In a stoichiometric reaction, all the reactants are placed on the left and the products on the right separated by an arrow symbol which indicates the direction of the reaction. An example of a reversible `"<=>"` stoichiometric reaction is:
+Metabolic models are sets of stoichiometric reactions that represents a process where a set of chemical compounds called reactants are converted into others called products. In a stoichiometric reaction, all the reactants are placed on the left and the products on the right separated by an arrow symbol which indicates the direction of the reaction. Some examples of valid stoichiometric reactions are:
 ```{r, eval= FALSE}
-"ATP[c] + 3-Phospho-D-glycerate[c] <=> ADP[c] + 3-Phospho-D-glyceroyl phosphate[c]"
+"H2O[c] + Urea-1-Carboxylate[c] <=> 2 CO2[c] + 2 NH3[c]"
+"ADP[c] + Phosphoenolpyruvate[c] => ATP[c] + Pyruvate[c]"
+"CO2[c] <=>"
 ```
 **MINVAL** can extract both, reactants and products for a set of stoichiometric reactions through the `reactants` and `products` functions as follows: 
 
 * If the reaction is irreversible `"=>"` then reactants and products are separated and returned afterward.
 ```{r}
-reactants(reactionList = "ATP[c] + alpha-D-Glucose[c] => ADP[c] + alpha-D-Glucose 6-phosphate[c]")
-products(reactionList = "ATP[c] + alpha-D-Glucose[c] => ADP[c] + alpha-D-Glucose 6-phosphate[c]")
+reactants(reactionList = "ADP[c] + Phosphoenolpyruvate[c] => ATP[c] + Pyruvate[c]")
+products(reactionList = "ADP[c] + Phosphoenolpyruvate[c] => ATP[c] + Pyruvate[c]")
 ```
 * If the reaction is reversible `"<=>"` then all reactants at some point can act as products and *vice versa*, for that reason functions return all reaction metabolites.
 ```{r}
-reactants(reactionList = "ATP[c] + 3-Phospho-D-glycerate[c] <=> ADP[c] + 3-Phospho-D-glyceroyl phosphate[c]")
-products(reactionList = "ATP[c] + 3-Phospho-D-glycerate[c] <=> ADP[c] + 3-Phospho-D-glyceroyl phosphate[c]")
+reactants(reactionList = "H2O[c] + Urea-1-Carboxylate[c] <=> 2 CO2[c] + 2 NH3[c]")
+products(reactionList = "H2O[c] + Urea-1-Carboxylate[c] <=> 2 CO2[c] + 2 NH3[c]")
 ```
 To show the potential use of the **MINVAL** package a set of 19 stoichiometric reactions that represent an unbalanced model of the glycolysis process was included. To load it just type:
 ```{r}
@@ -45,21 +47,25 @@ glycolysis <- read.csv(file = system.file("extdata", "glycolysisModel.csv",
                         stringsAsFactors = FALSE,
                         sep = '\t'
                         )
+glycolysis$REACTION
 ```
 Metabolic models include also another additional information related with the stoichiometric reactions. The follows are just the minimal information required:
 
-* ID:
-* DESCRIPTION:
-* REACTION: 
-* GPR:
-* LOWER.BOUND:
-* UPPER.BOUND:
-* OBJECTIVE:
+* **ID:** A list of single character strings containing the reaction abbreviations, Entries in the field abbreviation are used as reaction ids, so they must be unique.
+* **REACTION:** A set of stoichiometric reaction with the following characteristics:
+    - Arrows symbols must be given in the form `'=>'` or `'<=>'`
+    - Inverse arrow symbols `'<='` or other types as: `'-->'`, `'<==>'`, `'->'` will not be parsed and will lead to errors.
+    - Arrow symbols and plus signs (`+`) must be surrounded by a space character.
+    - Stoichiometric coefficients must be surrounded by a space character and not by parentheses.
+    - Each metabolite must have only one stoichiometric coefficient, substituents must be joined to metabolite name by a hyphen (`-`) symbol.
+    - Exchange reactions have only one metabolite before arrow symbol.
+    - Compartments must be given between square brackets (`[compartment]`) joined at the end of metabolite name.
+* **GPR:** A set of genes joined by boolean operators as AND or OR, rules may be nested by parenthesis. (optional: column can be empty)
+* **LOWER.BOUND:** A list of numeric values containing the lower bounds of the reaction rates. If not set, zero is used for an irreversible reaction and -1000 for a reversible reaction. (optional: column can be empty)
+* **UPPER.BOUND:** list of numeric values containing the upper bounds of the reaction rates. If not set, 1000 is used by default. (optional: column can be empty)
+* **OBJECTIVE:** A list of numeric values containing objective values (0 or 1) for each reaction (optional: column can be empty)
 ```{r}
 colnames(glycolysis)
-```
-```{r}
-head(x = glycolysis$REACTION, n = 10)
 ```
 ### SBML files
 ```{r}
